fix: align content in pay-and-feed block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -579,7 +579,7 @@ header {
   height: 1300px;
   display: flex;
   flex-direction: column;
-  margin-left: 93px;
+  margin-left: 124px;
 }
 .pay-and-feed__content-wrapper {
   display: flex;
